fix: aligned drop down just below button

--- a/src/ui-kit/styles/account-selector.scss
+++ b/src/ui-kit/styles/account-selector.scss
@@ -100,6 +100,13 @@
             font-size: 14px;
             padding: 9px 12px;
           }
+          display: flex;
+          align-items: center;
+        }
+        .uik-account-selector__language_dropdown_av{
+          position: relative;
+          top: 25px;
+          left: -74px;
         }
 
         .uik-account-selector__close-btn {
